--- a/user_management.html
+++ b/user_management.html
@@ -21,6 +21,7 @@
 
 </head>
 <body>
+  <div id="teste"></div>
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -172,8 +173,7 @@
                     <th id="opcoes">Opções</th>
                 </tr>
             </thead>
-            <tbody id="tablebody">
-            </tbody>
+            <tbody id="tablebody"></tbody>
             <!-- <td>
               <button type="button" class="visibility" data-bs-toggle="modal" data-bs-target="#MyModal"></button>
               <button type="button" class="edit" data-bs-toggle="modal" data-bs-target="#MyModalEditar"></button>
@@ -184,8 +184,14 @@
       </section>
     </div>
   </div> 
-</div> 
+</div>
   <script type="module" src="script/user_management.js"></script>
+  <!-- <script>
+    let l = document.createElement('img');
+    l.src = 'images/833.gif';
+    let conta = document.querySelector('#teste');
+    conta.appendChild(l);
+  </script> -->
   <script type="module" src="script/modal.js"></script>
 </body>
 </html>
