EM ANDAMENTO - arrumando os botoes da tabela e colocando o preloader

--- a/user_management.html
+++ b/user_management.html
@@ -21,7 +21,10 @@
 
 </head>
 <body>
-  <div id="teste"></div>
+  <div class="loader">
+    <img src="images/833.gif" alt="Loading..." />
+  </div>
+  <!-- <div id="teste"></div> -->
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -192,6 +195,7 @@
     let conta = document.querySelector('#teste');
     conta.appendChild(l);
   </script> -->
+  <script src="script/preloader.js"></script>
   <script type="module" src="script/modal.js"></script>
 </body>
 </html>
