troca dos id das msg de erro

--- a/product_registration.html
+++ b/product_registration.html
@@ -159,18 +159,18 @@
                     <div class="name-tipe-value">
                         <label for="">Nome
                             <input id="name" type="text" placeholder=""/>
-                            <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
+                            <p id="alertaproduto" style="display: none;">O Campo precisa ser preenchido</p>
                         </label>
                         <div class="tipe">
                             <label for="">Tipo
                                 <input id="tipe" type="text" placeholder=""/>
-                                <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
+                                <p id="alertatipoproduto" style="display: none;">O Campo precisa ser preenchido</p>
                             </label>
                         </div>
                         <div class="value">
                             <label for="">Valor
                                 <input id="value" type="text" placeholder=""/>
-                                <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
+                                <p id="alertavalorproduto" style="display: none;">O Campo precisa ser preenchido</p>
                             </label>
                         </div>
                     </div>
