--- a/product_management.html
+++ b/product_management.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="css/user_management.css" />
+  <link rel="stylesheet" type="text/css" href="css/product_management.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
@@ -166,7 +166,7 @@
             <thead>
                 <tr>
                     <th>Nome</th>
-                    <th>Usuário</th>
+                    <th>Valor</th>
                     <th id="opcoes">Opções</th>
                 </tr>
             </thead>
@@ -177,7 +177,6 @@
     </div>
   </div> 
 </div>
-  <script type="module" src="script/user_management.js"></script>
   <script type="module" src="script/modal.js"></script>
 </body>
 </html>
