EM ANDAMENTO - testes no modal

--- a/user_management.html
+++ b/user_management.html
@@ -18,6 +18,17 @@
 
 </head>
 <body>
+  <div id="li">
+
+    <p>Girl</p>
+    
+    <p>Boy</p>
+
+    <p>Man</p>
+
+    <p>Woman</p>
+    
+    </div>
   <!-- <div id="teste"></div> -->
   <div class="content">
     <div id="home">
