ajustando o modal de checked

--- a/user_registration.html
+++ b/user_registration.html
@@ -160,27 +160,27 @@
             <h2>Cadastro de Usuário</h2>
                 <div class="form">
                   <div class="user-email">
-                    <label for="">Nome
-                      <input id="nome" name="" required="" type="text" placeholder=""/>
+                    <label for="nome">Nome
+                      <input id="nome" name="nome" required type="text" placeholder=""/>
                       <p id="msgErro" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
-                    <label for="">Sobrenome
-                      <input id="sobrenome" name="" required="" type="text" placeholder=""/>
+                    <label for="sobrenome">Sobrenome
+                      <input id="sobrenome" name="sobrenome" required type="text" placeholder=""/>
                       <p id="msgErro2" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="user-email">
-                    <label for="">Usuário
-                      <input id="nomedeusuario" name="" required="" type="text" placeholder=""/>
+                    <label for="nomedeusuario">Usuário
+                      <input id="nomedeusuario" name="nomedeusuario" required type="text" placeholder=""/>
                       <p id="msgErro3" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
-                    <label for="">Email
-                      <input id="email" name="" required="" type="text" placeholder=""/>
+                    <label for="email">Email
+                      <input id="email" name="email" required type="text" placeholder=""/>
                       <p id="msgErro4" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="office-access">   
-                    <label for="">Cargo
+                    <label for="office">Cargo
                       <select id="office" >
                         <div class="dropdown-menu">
                           <option value="proprietario">Proprietário</option>
@@ -188,7 +188,7 @@
                         </div>
                       </select>
                     </label>
-                    <label for="">Nivel de acesso
+                    <label for="access">Nivel de acesso
                       <select id="access" >
                         <option value="administrador">Administrador</option>
                         <option value="gerenciador">Gerenciador</option>
@@ -198,7 +198,7 @@
                   </div>
                   <div class="register">
                     <div class="btn-group">
-                      <button class="btn btn-primary" id="btn_cadastrar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">CADASTRAR</button>
+                      <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
                     </div>
                   </div>
                 </div>
