--- a/user_registration.html
+++ b/user_registration.html
@@ -213,12 +213,16 @@
                           <div class="modal-body modal-dialog modal-lg">
                                   <img src="images/GREEN-checked.png" alt="">
                                   <h1>Usuário cadastrado com sucesso!</h1>
-                                  <button onclick="window.location.href='./user_management.html'" type="button" class="btn-paraGerenciamento" >IR PARA TELA DE GERENCIAMENTO</button>
+                                  <div class="modal-footer">
+                                    <button type="button" data-bs-dismiss="modal" class="btn btn-primary" onclick="window.location.href='user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
+                                  </div>
+                                 
                           </div>
                       </div>
                   </div>
-              </div>  
-        </section>
+                  
+              </div>
+              <button type="button" data-bs-dismiss="modal" class="btn btn-primary" onclick="window.location.href='user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
       </section>
     </div>
   </div> 
