--- a/user_registration.html
+++ b/user_registration.html
@@ -213,16 +213,13 @@
                           <div class="modal-body modal-dialog modal-lg">
                                   <img src="images/GREEN-checked.png" alt="">
                                   <h1>Usuário cadastrado com sucesso!</h1>
-                                  <div class="modal-footer">
-                                    <button type="button" data-bs-dismiss="modal" class="btn btn-primary" onclick="window.location.href='user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
-                                  </div>
-                                 
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" data-bs-dismiss="modal" class="btn-paraGerenciamento" onclick="window.location.href='user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
                           </div>
                       </div>
-                  </div>
-                  
+                  </div> 
               </div>
-              <button type="button" data-bs-dismiss="modal" class="btn btn-primary" onclick="window.location.href='user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
       </section>
     </div>
   </div> 
