--- a/product_management.html
+++ b/product_management.html
@@ -157,7 +157,7 @@
         </header>
         <!--Título da tela-->
         <section class="section-title">
-          <h2>Gerenciamento de usuário</h2>   
+          <h2>Gerenciamento de produtos</h2>   
         </section>
 
         <!--Tabela -> Gerenciamento de Usuarios-->
@@ -177,6 +177,7 @@
     </div>
   </div> 
 </div>
+  <script type="module" src="script/user_management.js"></script>
   <script type="module" src="script/modal.js"></script>
 </body>
 </html>
