--- a/production_management.html
+++ b/production_management.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="css/sale_management.css" />
+  <link rel="stylesheet" type="text/css" href="css/production_management.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
@@ -157,7 +157,7 @@
         </header>
         <!--Título da tela-->
         <section class="section-title">
-          <h2>Gerenciamento de vendas</h2>   
+          <h2>Gerenciamento da produção</h2>   
         </section>
 
         <!--Tabela -> Gerenciamento de Usuarios-->
@@ -165,9 +165,9 @@
           <table id="myTable" class="table">
             <thead>
                 <tr>
-                    <th>Data</th>
-                    <th>Vendedor</th>
-                    <th>Total</th>
+                    <th>Nome</th>
+                    <th>Tipo</th>
+                    <th>Lote</th>
                     <th id="opcoes">Opções</th>
                 </tr>
             </thead>
