consertando do id do input usuario

--- a/user_registration.html
+++ b/user_registration.html
@@ -171,7 +171,7 @@
                   </div>
                   <div class="user-email">
                     <label for="">Usuário
-                      <input id="nomedeusuario" name="" required="" type="text" placeholder=""/>
+                      <input id="usuario" name="" required="" type="text" placeholder=""/>
                       <p id="alerta_usuario" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label for="">Email
