Funcionamento da tela de cadastro novo

--- a/user_registration.html
+++ b/user_registration.html
@@ -171,7 +171,7 @@
                   </div>
                   <div class="user-email">
                     <label for="">Usuário
-                      <input id="usuario" name="" required="" type="text" placeholder=""/>
+                      <input id="nomedeusuario" name="" required="" type="text" placeholder=""/>
                       <p id="alerta_usuario" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label for="">Email
@@ -213,13 +213,12 @@
                           <div class="modal-body modal-dialog modal-lg">
                                   <img src="images/GREEN-checked.png" alt="">
                                   <h1>Usuário cadastrado com sucesso!</h1>
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" data-bs-dismiss="modal" class="btn-paraGerenciamento" onclick="window.location.href='user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
+                                  <button type="button" class="btn-paraGerenciamento" onclick="window.location.href = 'user_management.html'">IR PARA TELA DE GERENCIAMENTO</button>
                           </div>
                       </div>
-                  </div> 
-              </div>
+                  </div>
+              </div>  
+        </section>
       </section>
     </div>
   </div> 
