Alterado checkbox na tela de cadastro de nova produção <em andamento>

--- a/production_registration.html
+++ b/production_registration.html
@@ -174,17 +174,15 @@
                   </label>
                 </div>
               </div>
-              <label for="">Tipo de Validade</label>
+              <div class="validity">
+                <label for="">Tipo de Validade</label>
+              </div>
               <div class="time-date">
                 <label>
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  Prazo
+                  <input type="radio" name="question">Prazo
                 </label>
                 <label>
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  Data
+                  <input type="radio" name="question">Data
                 </label>
               </div>
               <div class="days">
@@ -203,22 +201,20 @@
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
-              <label for="">Quantidade Produzida</label>
+              <div class="quantity">
+                <label for="">Quantidade Produzida</label>
+              </div>
               <div class="unity-package">
                 <label>
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  Unidade
+                  <input type="radio" name="question">Unidade
                 </label>
                 <label>
-                  <input type="checkbox">
-                  <span class="checkmark"></span>
-                  Pacote
+                  <input type="radio" name="question">Pacote
                 </label>
               </div>
               <div class="package">
                 <label for="">Pacote
-                  <input id="days" type="text" placeholder=""/>
+                  <input id="package" type="text" placeholder=""/>
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
