function no checkbox - em andamento

--- a/production_registration.html
+++ b/production_registration.html
@@ -179,10 +179,10 @@
               </div>
               <div class="time-date">
                 <label>
-                  <input type="radio" name="question" id="deadline">Prazo
+                  <input type="radio" name="question" id="deadline" onclick="TipoValidade()">Prazo
                 </label>
                 <label>
-                  <input type="radio" name="question" id="date">Data
+                  <input type="radio" name="question" id="date" onclick="TipoValidade()">Data
                 </label>
               </div>
               <div class="days">
