Adicionado nova label e resposividade na tela de cadastro de nova produção <FINALIZADA>

--- a/production_registration.html
+++ b/production_registration.html
@@ -157,25 +157,25 @@
           <h2>Cadastro de Nova Produção</h2>
             <div class="form">
               <div class="name-tipe-batch">
-                <label for="">Nome
+                <label>Nome
                   <input id="name" type="text" placeholder=""/>
                   <p id="alertaproduto" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
                 <div class="tipe">
-                  <label for="">Tipo
+                  <label>Tipo
                     <input id="tipe" type="text" placeholder=""/>
                     <p id="alertatipoproduto" style="display: none;">O Campo precisa ser preenchido</p>
                   </label>
                 </div>
                 <div class="batch">
-                  <label for="">Lote
+                  <label>Lote
                     <input id="batch" type="text" placeholder=""/>
                     <p id="alertavalorproduto" style="display: none;">O Campo precisa ser preenchido</p>
                   </label>
                 </div>
               </div>
               <div class="validity">
-                <label for="">Tipo de Validade</label>
+                <label>Tipo de Validade</label>
               </div>
               <div class="time-date">
                 <label>
@@ -186,23 +186,23 @@
                 </label>
               </div>
               <div class="days">
-                <label for="">Dias válidos
-                  <input id="days" type="text" placeholder=""/>
+                <label>
+                  <input id="days" type="text" placeholder=""/>Dias válidos
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
               <div class="fabrication-pay">
-                <label for="">Data de fabricação
+                <label>Data de fabricação
                   <input id="fabrication" type="text" placeholder=""/>
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
-                <label for="">Data de Vencimento
+                <label>Data de Vencimento
                   <input id="pay" type="text" placeholder=""/>
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
               <div class="quantity">
-                <label for="">Quantidade Produzida</label>
+                <label>Quantidade Produzida</label>
               </div>
               <div class="unity-package">
                 <label>
@@ -212,9 +212,15 @@
                   <input type="radio" name="question">Pacote
                 </label>
               </div>
+              <div class="unity">
+                <label>
+                  <input id="unity" type="text" placeholder=""/>Unidades
+                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                </label>
+              </div>
               <div class="package">
-                <label for="">Pacote
-                  <input id="package" type="text" placeholder=""/>
+                <label>
+                  <input id="package" type="text" placeholder=""/>Pacotes
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
