Substituido input por dropdown e responsividade ajustada da tela de cadastro de nova produção

--- a/production_registration.html
+++ b/production_registration.html
@@ -175,7 +175,7 @@
                 </div>
               </div>
               <div class="validity" id="validity_type">
-                <label for="">Tipo de Validade</label>
+                <label>Tipo de Validade</label>
               </div>
               <div class="time-date">
                 <label>
@@ -186,8 +186,8 @@
                 </label>
               </div>
               <div class="days">
-                <label for="">Dias válidos
-                  <input id="days" type="text" placeholder=""/>
+                <label>
+                  <input id="days" type="text" placeholder=""/>dias válidos
                   <p id="alerta_dias" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
@@ -202,26 +202,25 @@
                 </label>
               </div>
               <div class="quantity" id="quantity_produced">
-                <label for="">Quantidade Produzida</label>
+                <label>Quantidade Produzida</label>
+              </div>
+              <div class="radio-package">
+                <label>
+                  <input type="radio" name="question" checked>Pacote
+                </label>
               </div>
               <div class="unity-package">
-                <label>
-                  <input type="radio" name="question">Unidade
-                </label>
-                <label>
-                  <input type="radio" name="question">Pacote
-                </label>
-              </div>
-              <div class="unity">
-                <label>
-                  <input id="unity" type="text" placeholder=""/>Unidades
+                <label class="unity">Unidades
+                  <input id="unity" type="text" placeholder=""/>
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
-              </div>
-              <div class="package">
-                <label for="">Pacote
-                  <input id="package" type="text" placeholder=""/>
-                  <p id="alerta_pacotes" style="display: none;">O Campo precisa ser preenchido</p>
+                <label class="package">Pacotes
+                  <select>
+                    <option value="5">5</option>
+                    <option value="10">10</option>
+                    <option value="15">15</option>
+                    <option value="20">20</option>
+                  </select>
                 </label>
               </div>
               <div class="register">
