Ajustado inputs e checkbox na tela de cadastro de nova produção

--- a/production_registration.html
+++ b/production_registration.html
@@ -179,10 +179,10 @@
               </div>
               <div class="time-date">
                 <label>
-                  <input type="radio" name="question" id="deadline" onclick="TipoValidade()">Prazo
+                  <input type="radio" name="question" id="deadline">Prazo
                 </label>
                 <label>
-                  <input type="radio" name="question" id="date" onclick="TipoValidade()">Data
+                  <input type="radio" name="question" id="date">Data
                 </label>
               </div>
               <div class="days">
@@ -212,7 +212,7 @@
               <div class="unity-package">
                 <label class="unity">Unidades
                   <input id="unity" type="text" placeholder=""/>
-                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                  <p id="alerta_unidade" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
                 <label class="package">Pacotes
                   <select>
