Switch dos campos de data de fabricação

--- a/production_registration.html
+++ b/production_registration.html
@@ -179,25 +179,25 @@
               </div>
               <div class="time-date">
                 <label>
-                  <input type="radio" name="question" id="deadline" onclick="TipoValidade()">Prazo
+                  <input type="radio" name="question" id="deadline" value="prazo">Prazo
                 </label>
                 <label>
-                  <input type="radio" name="question" id="date" onclick="TipoValidade()">Data
+                  <input type="radio" name="question" id="date" value="data">Data
                 </label>
               </div>
-              <div class="days">
+              <div class="days" id="boxday">
                 <label for="">Dias válidos
                   <input id="days" type="text" placeholder=""/>
                   <p id="alerta_dias" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
-              <div class="fabrication-pay">
+              <div class="fabrication-pay" id="boxfabrication">
                 <label for="">Data de fabricação
-                  <input id="fabrication" type="text" placeholder=""/>
+                  <input id="fabrication" type="date" placeholder=""/>
                   <p id="alerta_data_fabricacao" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
                 <label for="">Data de Vencimento
-                  <input id="pay" type="text" placeholder=""/>
+                  <input id="pay" type="date" placeholder=""/>
                   <p id="alerta_data_vencimento" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
@@ -206,19 +206,16 @@
               </div>
               <div class="unity-package">
                 <label>
-                  <input type="radio" name="question">Unidade
-                </label>
-                <label>
-                  <input type="radio" name="question">Pacote
+                  <input type="radio" name="question" id="package">Pacote
                 </label>
               </div>
-              <div class="package">
+              <div class="package" id="boxpackage">
                 <label for="">Pacote
                   <input id="package" type="text" placeholder=""/>
                   <p id="alerta_pacotes" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
-              <div class="register">
+              <div class="register" >
                 <div class="btn-group">
                   <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
                 </div>
