adicionando arquivos e scripts para o backend

--- a/product_management.html
+++ b/product_management.html
@@ -177,7 +177,7 @@
     </div>
   </div> 
 </div>
-  <script type="module" src="script/user_management.js"></script>
+  <script type="module" src="script/product_management.js"></script>
   <script type="module" src="script/modal.js"></script>
 </body>
 </html>
