criacao dos modais para  tela ->product management

--- a/product_management.html
+++ b/product_management.html
@@ -128,7 +128,7 @@
       <section class="content-table">
         <header class="bar-status">
           <div class="welcome">    
-            <h1 id="hello">Usuários</h1>            
+            <h1 id="hello">Produtos</h1>            
           </div>
           <ul class="bar-login">
             <li id="usuario">
