Renomeado as id da tab navbar da tela de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -157,14 +157,14 @@
             <h2>Cadastro de Venda</h2>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Produtos</button>
+                  <button class="nav-link" id="product-tab" data-bs-toggle="tab" data-bs-target="#product" type="button" role="tab" aria-controls="product" aria-selected="false">Produtos</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Forma de Pagamento</button>
+                  <button class="nav-link" id="payment-tab" data-bs-toggle="tab" data-bs-target="#payment" type="button" role="tab" aria-controls="payment" aria-selected="false">Forma de Pagamento</button>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent" style="width: 100%;">
-                <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="tab-pane fade show active" id="product" role="tabpanel" aria-labelledby="product-tab">
                     <div class="form">
                         <h5 class="sale">Tipo de Venda</h5>
                         <div class="public-order">
@@ -177,7 +177,7 @@
                           </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">c</div>
+                <div class="tab-pane fade" id="payment" role="tabpanel" aria-labelledby="payment-tab">c</div>
             </div>
         </section>
       </section>
