--- a/product_registration.html
+++ b/product_registration.html
@@ -17,6 +17,9 @@
   <script src="script/database/database-connection.js"></script>
 </head>
 <body>
+  <div class="loader">
+    <img src="images/833.gif" alt="Loading..." />
+  </div>
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -185,6 +188,7 @@
     </div>
   </div> 
 </div>
+<script src="script/preloader.js"></script>
 <script type="module" src="script/product_registration.js"></script>
 </body>
 </html>
