--- a/sale_registration.html
+++ b/sale_registration.html
@@ -164,21 +164,83 @@
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent" style="width: 100%;">
-                <div class="tab-pane fade show active" id="product" role="tabpanel" aria-labelledby="product-tab">
-                    <div class="form">
-                        <h5 class="sale">Tipo de Venda</h5>
-                        <div class="public-order">
-                            <label>
-                              <input type="radio" name="question" id="public" value="geral">Geral
-                            </label>
-                            <label>
-                              <input type="radio" name="question" id="order" value="encomenda">Encomenda
-                            </label>
-                          </div>
-                    </div>
+              <div class="tab-pane fade show active" id="product" role="tabpanel" aria-labelledby="product-tab">
+                <div class="form">
+                  <h5 class="sale">Tipo de Venda</h5>
+                <div class="public-order">
+                  <label>
+                    <input type="radio" name="question" id="public" value="geral">Geral
+                  </label>
+                  <label>
+                    <input type="radio" name="question" id="order" value="encomenda">Encomenda
+                  </label>
+                  </div>
                 </div>
-                <div class="tab-pane fade" id="payment" role="tabpanel" aria-labelledby="payment-tab">c</div>
+                <div class="form">
+                  <div class="seller-date">
+                    <label>Vendedor
+                      <input id="name" type="text" placeholder=""/>
+                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                    <label>Data
+                      <input id="date" type="text" placeholder=""/>
+                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                  </div>
+                  <div class="total-general">
+                    <label>Total geral
+                      <input id="total-general" type="text" placeholder=""/>
+                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                  </div>
+                  <div class="product-type-quantity">
+                    <label>Produto
+                      <input id="" type="text" placeholder=""/>
+                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                    <div class="type">
+                      <label>Tipo
+                        <input id="" type="text" placeholder=""/>
+                        <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      </label>
+                    </div>
+                    <label>Quantidade
+                      <input id="" type="text" placeholder=""/>
+                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                    <div class="price-total">
+                      <label>Preço unid.
+                        <input id="" type="text" placeholder=""/>
+                        <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      </label>
+                      <label>Total
+                        <input id="" type="text" placeholder=""/>
+                        <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                        <span>Adicionar</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="total-general-2">
+                    <label>Total geral
+                      <input id="total-general" type="text" placeholder=""/>
+                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                    </label>
+                  </div>
+              </div>
             </div>
+            <div class="tab-pane fade" id="payment" role="tabpanel" aria-labelledby="payment-tab">
+              <div class="form">
+                <h5 class="sale">Tipo de Venda</h5>
+              <div class="public-order">
+                <label>
+                  <input type="radio" name="question" id="public" value="geral">Geral
+                </label>
+                <label>
+                  <input type="radio" name="question" id="order" value="encomenda">Encomenda
+                </label>
+              </div>
+            </div>
+          </div>
         </section>
       </section>
     </div>
